tests/build/cases/widget/cannot_remove_inherited_required.stderr
error: cannot remove, property `margin` is required
  --> $DIR/cannot_remove_inherited_required.rs:18:18
   |
18 |         remove { margin }
   |                  ^^^^^^
